[package]
name = "gemserv"
version = "0.4.6"
authors = ["int 80h <int@80h.dev>"]
edition = "2018"
description = "A gemini server"
readme = "README"
homepage = "https://sr.ht/~int80h/gemserv/"
repository = "https://git.sr.ht/~int80h/gemserv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = [ "full" ] }
openssl = "0.10.38"
tokio-openssl = "0.6.3"
futures-util = "0.3.17"
toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
url = "2.2.2"
new_mime_guess = "3.0.1"
mime = "0.3.16"
log = "0.4.14"
simple_logger = "1.13"

[features]
default = [ "cgi", "scgi", "proxy" ]
cgi = []
scgi = []
proxy = []

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [ "cgi-scripts/agena-cgi" ]
