[package]
name = "gemserv"
version = "0.6.1"
authors = ["int 80h <int@80h.dev>"]
edition = "2018"
description = "A gemini server"
keywords = ["server", "gemini", "protocol"]
categories = ["network-programming"]
readme = "README"
homepage = "https://sr.ht/~int80h/gemserv/"
repository = "https://git.sr.ht/~int80h/gemserv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = [ "full" ] }
rustls-pemfile = "0.2.1"
futures-util = "0.3.18"
toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
url = "2.2.2"
new_mime_guess = "3.0.2"
mime = "0.3.16"
log = "0.4.14"
simple_logger = "1.15"
sha2 = "0.9.8"
x509-parser = "0.12"

[dependencies.tokio-rustls]
version = "0.23.1"
optional = false
features = ["dangerous_configuration"]

[features]
default = [ "cgi", "scgi", "proxy" ]
cgi = []
scgi = []
proxy = []

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [ "cgi-scripts/agena-cgi" ]
